--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,20 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "accelerate>=1.7.0",
+    "bitsandbytes>=0.46.0",
+    "datasets>=3.6.0",
+    "huggingface-hub>=0.32.4",
+    "ipywidgets>=8.1.7",
+    "notebook>=7.4.3",
+    "peft>=0.15.2",
+    "scikit-learn>=1.7.0",
+    "scipy>=1.15.3",
+    "sentence-transformers>=4.1.0",
+    "sqlalchemy>=2.0.41",
+    "streamlit>=1.45.1",
+    "streamlit-chat>=0.1.1",
+    "transformers>=4.52.4",
+    "trl>=0.18.1",
+]
